[tool.poetry]
name = "my-ip"
version = "0.1.0"
description = ""
authors = ["lainiwa <kirrik96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = {version = "^3.6", extras = ["speedups"]}
toml = "^0.10.0"
pydantic = "^0.32.2"
click = "^7.0"
[tool.poetry.dev-dependencies]
pytest = "^3.0"
pre-commit = "^1.18"

[tool.poetry.scripts]
mip = 'my_ip.console:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.isort]
# https://github.com/timothycrosley/isort/wiki/isort-Settings
line_length = 79
atomic = true
indent = '    '
multi_line_output = 3
length_sort = true


[tool.black]
# pre-commit run black --help
line-length = 79
verbose = true
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
