[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = "my-ip"
version = "0.2.1"
description = "Get your internet IP. Fast."
authors = ["lainiwa <kirrik96@gmail.com>"]
license = "MIT"
readme = "README.rst"
# url = "https://github.com/lainiwa/my-ip"
homepage = "https://github.com/lainiwa/my-ip"
repository = "https://github.com/lainiwa/my-ip"
# documentation = ""
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "*"
toml = "*"
pydantic = "*"
click = "*"
trio = "*"
asks = "*"
pyxdg = "*"
loguru = "*"
importlib_metadata = "*"
[tool.poetry.dev-dependencies]
pytest = "*"
pre-commit = "*"
sphinx = "*"
sphinx_rtd_theme = "*"
sphinxcontrib-napoleon = "*"
# sphinxcontrib-golangdomain = "=0.2.0.dev0"  # had to manually install
sphinx-autoapi = "*"  # otherwise `poetry add --dev sphinx-autoapi` would fail
pylint = "*"
ipython = "*"
mypy = "*"
snakeviz = "*"
pyprof2calltree = "*"
gprof2dot = "*"
[tool.poetry.scripts]
mip = 'my_ip.console:cli'


[tool.isort]
# https://github.com/timothycrosley/isort/wiki/isort-Settings
line_length = 79
atomic = true
indent = '    '
multi_line_output = 3
length_sort = true


[tool.black]
# pre-commit run black --help
line-length = 79
verbose = true
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
